--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <script>
   (function(d) {
     var config = {
-      kitId: 'jxa3rlt',
+      kitId: 'vai3ihc',
       scriptTimeout: 3000,
       async: true
     },
